styles.css
/* ... */
/* Portfolio Section*/

.section-portfolio-gallery {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 100px;
  width: 100%;
}

.gallery-item {
  height: 600px;
  width: 600px;
  position: relative;
}

.gallery-item:nth-of-type(odd) {
  left: 20%;
}

.gallery-item:nth-of-type(even) {
  right: 20%;
}

.gallery-item:not(:first-of-type) {
  margin-top: 80px;
}

.gallery-item .image-container {
  background-color: var(--dark-grey);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center top;
  border-radius: 50%;
  height: 70%;
  width: 70%;
  position: absolute;
  top: 0%;
  right: 75%;
  overflow: hidden;
}

.gallery-item:nth-of-type(even) .image-container {
  left: 75%;
}

.image-container-0 {
  background-image: url(./assets/katelyns-book-nook2.jpg);
}

.image-container-1 {
  background-image: url(./assets/oocms.jpg);
}

.image-container-2 {
  background-image: url(./assets/willow2.jpg);
}

.image-container-3 {
  background-image: url(./assets/thrifty-dragon.jpg);
}

.gallery-item .gallery-item-info {
  background-color: var(--light-blue);
  border-bottom: 5px solid var(--red-shade);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  padding: 20px;
  height: 60%;
  width: 100%;
  position: absolute;
  bottom: 0;
}

.gallery-item:nth-of-type(odd)  .gallery-item-info {
  border-right: 5px solid var(--red-shade);
  box-shadow: -5px -5px 10px rgba(0,0,0,0.3);
}

.gallery-item:nth-of-type(even) .gallery-item-info {
  border-left: 5px solid var(--red-shade);
  box-shadow: 5px -5px 10px rgba(0,0,0,0.3);
}

.gallery-item .gallery-item-info p {
  font-size: 2rem;
  line-height: 2.6rem;
  margin: 10px;
}

.gallery-item-icons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.gallery-item-icons .skills-icon {
  box-shadow: 1px 1px 1px var(--red-shade);
  font-size: 3rem;
  margin: 0 10px;
  padding: 10px;
}

.project-links {
  display: flex;
  margin-top: 30px;
}

.project-links a {
  border: 2px solid var(--light-grey);
  color: var(--light-grey);
  font-size: 1.6rem;
  letter-spacing: 1.2px;
  margin: 0 10px;
  padding: 10px 15px;
  text-transform: uppercase;
  transition: all 0.3s ease;
}

.project-links a:focus,
.project-links a:hover {
  border: 2px solid var(--red-shade);
  color: var(--red-shade);
}


/* Contact Section */

form.contact {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  margin: 80px auto 0;
  width: 70%;
  max-width: 770px;
}

form.contact input {
  margin-bottom: 20px;
  width: calc(50% - 10px);
}

form.contact textarea {
  width: 100%;
}

form.contact input,
form.contact textarea {
  background-color: var(--light-grey);
  border: none;
  border-bottom: 5px solid var(--red-shade);
  font-size: 2rem;
  padding: 10px
}

form.contact input::placeholder,
form.contact textarea::placeholder {
  color: var(--light-blue);
}

form.contact button {
  background-color: transparent;
  border: 3px solid var(--light-grey);
  color: var(--light-grey);
  cursor: pointer;
  font-size: 2.4rem;
  margin: 20px auto 0;
  padding: 10px 30px;
  text-align: center;
  text-transform: uppercase;
  transition: all 0.3s ease;
}

form.contact button:focus,
form.contact button:hover {
  border: 3px solid var(--red-shade);
  color: var(--red-shade);
}

.section-contact-links {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin-top: 80px;
}

.section-contact-links li {
  margin: 10px;
}

.section-contact-links i {
  font-size: 4rem;
  margin-right: 15px;
}

.section-contact-links a {
  background-color: var(--dark-blue);
  color: var(--light-grey);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2.6rem;
  padding: 10px 20px;
  text-decoration: none;
  transition: color 0.3s ease;
}

.section-contact-links a:hover,
.section-contact-links a:focus {
  color: var(--red-shade);
}

/* Footer */

footer p {
  margin: 2rem 0;
  text-align: center;
}


/* Media Queries */

@media (max-width: 1300px) {

  h1 {
    font-size: 8rem;
  }

  .header-content {
    margin-top: 320px;
  }

  .header-content h1,
  .header-content h2 {
    width: 420px;
  }

  .header-content h2 {
    font-size: 5rem;
  }

}


@media (max-width: 1100px) {

  .header-content h1 {
    align-self: flex-start;
    margin-bottom: 40px;
  }

  .header-content {
    flex-direction: column;
    margin-top: 480px;
  }

  .header-content h1,
  .header-content h2 {
    width: 820px;
  }

  .gallery-item:nth-of-type(odd) {
    left: 0;
    align-self: flex-end;
  }

  .gallery-item:nth-of-type(even) {
    right: 0;
    align-self: flex-start;
  }
}


@media (max-width: 920px) {

  h1 {
    font-size: 7rem;
  }
  
  h4 {
    font-size: 2.5rem;
  }

  header::before {
    height: 420px;
    width: 420px;
  }

  header nav li {
    font-size: 2.8rem;
  }

  .header-content {
    margin-top: 400px;
  }

  .header-content h2 {
    font-size: 4.6rem;
  }

  .header-content h1,
  .header-content h2 {
    width: 90%;
  }

  .gallery-item {
    height: 500px;
    width: 500px;
  }

  .gallery-item .gallery-item-info p {
    font-size: 1.6rem;
  }

}
/* ... */

